// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reducer Books FETCH_BOOKS_FAILURE should update error for requested page 1`] = `
Object {
  "books": Object {
    "1": Object {
      "error": undefined,
      "hasError": true,
      "isApiCallInProgress": false,
      "lists": Array [],
    },
  },
  "error": undefined,
  "hasError": false,
  "isApiCallInProgress": false,
}
`;

exports[`Reducer Books FETCH_BOOKS_REQUEST should update api in call for requested page 1`] = `
Object {
  "books": Object {
    "1": Object {
      "error": undefined,
      "hasError": false,
      "isApiCallInProgress": true,
      "lists": Array [],
    },
  },
  "error": undefined,
  "hasError": false,
  "isApiCallInProgress": false,
}
`;

exports[`Reducer Books FETCH_BOOKS_SUCCESS should update books list of requested page 1`] = `
Object {
  "books": Object {
    "1": Object {
      "error": undefined,
      "hasError": false,
      "isApiCallInProgress": false,
      "lists": Array [
        Object {
          "id": "book-id",
        },
      ],
    },
  },
  "error": undefined,
  "hasError": false,
  "isApiCallInProgress": false,
}
`;
